Use `Ember.Application#rootElement`
see for detail: http://emberjs.com/api/classes/Ember.Application.html

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,7 @@
 <script type="text/x-handlebars" data-template-name="todos">
   hello in
 </script>
+<div id="my-application">
+  <!-- Ember Application will boot on this element -->
+</div>
 hello out
