Use application template
see for detail:
http://emberjs.com/guides/templates/the-application-template/

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,10 @@
+<!-- application template -->
+<script type="text/x-handlebars">
+  header content
+  {{outlet}}
+  hooter content
+</script>
+
 <script type="text/x-handlebars" data-template-name="todos">
   hello in
 </script>
-hello out
